k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: chat-application
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend-pod
      namespace: chat-application
      labels:
        app: backend
    spec:
      containers:
        - name: chatapp-backend
          image: saurabhpanth/chat-backend:latest
          ports:
            - containerPort: 5001
