k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: chat-application
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend-pod
      namespace: chat-application
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: saurabhpanth/chat-frontend:latest
          ports:
            - containerPort: 80
